securitygroup2.tf
resource "aws_security_group" "web_with_tcp" {
  name        = "web_with_tcp"
  description = "allow ssh and http traffic"
  vpc_id      = "vpc-0a58d9188d5428f53"
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
}
